# StarAndroidInject

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/star/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Injector
app/src/main/cpp/: CMakeLists.txt  OpenGL.h  STARCOOL.h  SocketControl.h  monster.h  native-lib.cpp  style.h
app/src/main/cpp/Includes/: Macros.h  Utils.h
app/src/main/cpp/STARCOOLX/: Call_Me.h
app/src/main/cpp/STARCOOLX/Dump/: BNMUtils.h  config.h  log.h
app/src/main/cpp/STARCOOLX/Dump/Il2Cpp/: il2cpp_dump.cpp
app/src/main/cpp/STARCOOLX/IL2CppSDKGenerator/: Call_IL2CppSDKGenerator.h  Rect.h
app/src/main/cpp/STARCOOLX/Tools/: Call_Tools.h  Tools.h
app/src/main/cpp/Substrate/: SymbolFinder.cpp
app/src/main/java/com/star/android/: MainActivity.kt
app/src/main/java/com/star/android/service/: FloatingService.kt
app/src/main/java/com/star/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/star/android/utils/: ShellUtils.kt  SocketClient.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/star/android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
